针对JVM参数设置